fix control alignment issue

--- a/client/less/tracing.less
+++ b/client/less/tracing.less
@@ -20,20 +20,21 @@
 
 
       .pm-host-selector-container {
-
-        .dropdown-menu {
-          top:6rem;
-          left:0;
-        }
-      }
-      .pm-pids-container {
-
         position:relative;
 
         .sl-pid-selector {
+          position:relative;
+          vertical-align: middle;
+          display:inline-block;
+          margin-left:1rem;
+
           .sl-profiler-processes {
             min-height:0;
           }
+        }
+        .dropdown-menu {
+          top:6rem;
+          left:0;
         }
       }
       .pm-status-container {}
